Cars service update and Users Authetication Context